Utworzono za pomocą Colaboratory

--- a/template.ipynb
+++ b/template.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNHnG0v6hDoCA6nhLNHZcD3",
+      "authorship_tag": "ABX9TyPuebChmGOeSW2wjf04DcCM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,304 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "CLvfVSq6yZVm"
+        "id": "CLvfVSq6yZVm",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "b138b4ed-43a5-4365-90d0-71c36cb17e2a"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'1.22.4'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
+      "source": [
+        "import numpy as np\n",
+        "np.__version__"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Tworzenie tablic\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "GO7V7klW1cEM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.zeros(shape = (4,10))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rtxoYcF00Gwc",
+        "outputId": "8b452996-8547-4482-cf0d-a0dd05ce88c8"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.],\n",
+              "       [0., 0., 0., 0., 0., 0., 0., 0., 0., 0.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.zeros(shape =(4,10), dtype = 'int')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Eq2J4fFj1mna",
+        "outputId": "ea783cc9-d99c-4a5f-b23e-60e8be5525a1"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+              "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.ones(shape=(5,5))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "e9fJHYwU1ueX",
+        "outputId": "f527d918-d9ad-4a26-c856-72bbeb04558d"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.],\n",
+              "       [1., 1., 1., 1., 1.]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.ones(shape = (5,5), dtype='int')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XmjGaQB51xwj",
+        "outputId": "7ac16c21-4a93-401f-e735-8b8e8d693235"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 1, 1, 1, 1],\n",
+              "       [1, 1, 1, 1, 1],\n",
+              "       [1, 1, 1, 1, 1],\n",
+              "       [1, 1, 1, 1, 1],\n",
+              "       [1, 1, 1, 1, 1]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.random.randn(4,4)"
+      ],
+      "metadata": {
+        "id": "P8eGHdPI5fMs"
+      },
+      "execution_count": 8,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for row in A:\n",
+        "  print(row[:3])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ubTi70p413TI",
+        "outputId": "64451aa7-0d02-4c7e-ec27-45a51c0fd217"
+      },
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[ 0.71791299 -0.02799902 -0.27928275]\n",
+            "[ 0.47581277 -1.28337107  1.23123764]\n",
+            "[-0.09756518 -0.77063433  1.89462825]\n",
+            "[-0.68400103  0.60364743 -0.75318965]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Maski logiczne**\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "THv_UUYi51w_"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.arange(start = -10, stop = 10, step =0.5)\n",
+        "A = A.reshape(10,-1)\n",
+        "A"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rJlrYA0t5k0I",
+        "outputId": "5b5d341a-0337-40e2-d5e6-e9d59e296c4c"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[-10. ,  -9.5,  -9. ,  -8.5],\n",
+              "       [ -8. ,  -7.5,  -7. ,  -6.5],\n",
+              "       [ -6. ,  -5.5,  -5. ,  -4.5],\n",
+              "       [ -4. ,  -3.5,  -3. ,  -2.5],\n",
+              "       [ -2. ,  -1.5,  -1. ,  -0.5],\n",
+              "       [  0. ,   0.5,   1. ,   1.5],\n",
+              "       [  2. ,   2.5,   3. ,   3.5],\n",
+              "       [  4. ,   4.5,   5. ,   5.5],\n",
+              "       [  6. ,   6.5,   7. ,   7.5],\n",
+              "       [  8. ,   8.5,   9. ,   9.5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A > 0"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9p56kkpG6CmK",
+        "outputId": "518b7e86-9d29-4e17-aaa3-1a08fc84a720"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False, False, False, False],\n",
+              "       [False,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True],\n",
+              "       [ True,  True,  True,  True]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# np.bitwise_and(A > -5, A , 5)"
+      ],
+      "metadata": {
+        "id": "1Y10B4w36LH1"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "09Hd9nhz6OU-"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
